requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amo-scaffold"
version = "0.1.0"
description = "Simple AMO scaffold with simulators, interlocks, recipes, and a CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["amo*"]

[project.scripts]
amo = "amo.ui.cli:app"
